Archive2/67/1b380b4e19cdb7/output
main.cpp:13:51: error: expected primary-expression before ';' token
     static constexpr  unsigned int  n = extent<Tn>;
                                                   ^
main.cpp:15:10: error: size of array 't' is not an integral constant-expression
     T t[n];
          ^
main.cpp:20:43: error: expected parameter pack before '...'
     conditional< (sizeof...(P)>0), Vertex<...P>, int >  v;
                                           ^
main.cpp:20:47: error: template argument 1 is invalid
     conditional< (sizeof...(P)>0), Vertex<...P>, int >  v;
                                               ^
main.cpp:20:54: error: template argument 2 is invalid
     conditional< (sizeof...(P)>0), Vertex<...P>, int >  v;
                                                      ^
main.cpp:21:1: error: expected ';' after struct definition
 }
 ^
